[package]
name = "pls"
version = "0.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["stream"] }
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
zstd = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
